# test-secunda

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: README  env.py
app/alembic/versions/: 01c07461a992_orgs_act_names_unique.py  1bb7355d7193_activity.py  2ccdd25fb04b_organizations_2.py  347df5c9fe37_init.py  a0614cbcee4f_addres_coordinates.py  c8b3cfdd5139_organization.py
app/api/: openapi.py  routers.py  schemas.py
app/api/mappers/: addresses.py  organizations.py
app/data/: sqlite.db
app/domain/: schemas.py
app/infrastructure/: dependencies.py
app/infrastructure/core/: __init__.py  config.py  lifespan.py  logging.py
app/infrastructure/repos/: README.md  __init__.py  cruds.py  models.py  session.py
app/infrastructure/repos/utils/: __init__.py  db_url_handler.py
app/presentation/api/: __init__.py  dependencies.py  openapi.py  routers.py
